Ran FindBugs on polyglot, which was easy. Found lots of potential issues. Fixed a few and marked a few more (grep for Findbugs). Lots of bad use of + for string concatenation in the code is flagged -- which probably accounts for some performance problems.